--- a/week 1/solutions.tex
+++ b/week 1/solutions.tex
@@ -130,16 +130,20 @@
   % #####################################################################################
   
   \exerciseenum{6}{% 
-  \item%a
-  \dots  % Put here your calculation
+  \item x - $x^3$ = x(1-$x^2$) = x(1+x)(1-x) then we have x \in \{-1, 0, 1\} \\
   \global\Copy{exzesa}{
-   antwoord 6a  % Put here the final answer, which is then also copied to the form on the last page
+  % Put here the final answer, which is then also copied to the form on the last page
   }
   
-  \item%b
-  \dots  % Put here your calculation
+  \item we have (1-$x^2$) $>$ 0 =$>$ $\vert$ x $\vert$ $<$ 1 meaning that x \in (-1, 1). \\ 
+  $Thus by resulting on 4 cases:$ \\
+  1) x < -1 => x < 0, (1-$x^2$) $<$ 0, thus f(x) $>$ 0 \\
+  2) x \in (-1, 0) => x < 0, (1-$x^2$) $>$ 0, thus f(x) $<$ 0 \\
+  3) x \in (0, 1) => x > 0, (1-$x^2$) $>$ 0, thus f(x) $>$ 0 \\
+  4) x $>$ 1 =$>$ x $>$ 0, (1-$x^2$) $<$ 0, thus f(x) $<$ 0
+  
   \global\Copy{exzesb}{
-   antwoord 6b  % Put here the final answer
+    % Put here the final answer
   }
   
   }
