--- a/week 1/solutions.tex
+++ b/week 1/solutions.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
   \usepackage[utf8]{inputenc}
+  \usepackage{amsmath}
   
   \title{Calculus & Probability theory}
   \author{brigelpineti }
@@ -35,7 +36,19 @@
   Since f(-x) $\eq$ -f(x) then the function is \textbf{odd}. \\ \\
   \textbf{b)} f(-x) = $\sqrt[3]{(1+x)^2}$ + $\sqrt[3]{(1-x)^2}$ and -f(x) = - $\sqrt[3]{(1-x)^2}$ - $\sqrt[3]{(1+x)^2}$ \\
   Since f(-x) $\eq$ f(x) then the function is \textbf{even}. \\
-  Since f(-x) $\neq$ -f(x) then the function is \textbf{not odd}. 
+  Since f(-x) $\neq$ -f(x) then the function is \textbf{not odd}.
+  
+  \section*{Exercise 9}
+  \section*{Exercise 10}
+  \textbf{a)} Transform expression to y(cx + d) = ax + b \\
+  $>$ ycx + yd = ax + b \{place x on one side to group\} \\ 
+  $>$ ycx -ax = b - yd  \{now group by x\} \\
+  $>$ x(yc - a) = b - yd \{computer for x\} \\
+  $>$ x = $\dfrac{b-yd}{yc-a}$ \\ \\
+  Therefore, the inverse function is given by g(x) = \dfrac{b-xd}{xc-a} 
+  
+  
+  \section*{Exercise 11}
   
   \end{document}
   
