--- a/week 1/solutions.tex
+++ b/week 1/solutions.tex
@@ -45,8 +45,9 @@
   $>$ ycx -ax = b - yd  \{now group by x\} \\
   $>$ x(yc - a) = b - yd \{computer for x\} \\
   $>$ x = $\dfrac{b-yd}{yc-a}$ \\ \\
-  Therefore, the inverse function is given by g(x) = \dfrac{b-xd}{xc-a} 
-  
+  Therefore, the inverse function is given by g(x) = $\dfrac{b-xd}{xc-a}$ \\ \\
+  \textbf{b)} When d = -a then \textit{g} is equal to \textit{f}. To be noted is that g is defined for all \textit{x} besides x = $\dfrac{a}{c}$. f(x) being equal to $\dfrac{a}{c}$ means that ad = bd = 0, thus by saying that g is defined for the whole range of f.
+   
   
   \section*{Exercise 11}
   
