--- a/week 1/solutions.tex
+++ b/week 1/solutions.tex
@@ -51,5 +51,12 @@
   
   \section*{Exercise 11}
   
+  \textbf{a)} For all x $\neq$ 2 : \\ 
+  $>$ $\dfrac{x-2}{(x-2)(x+3)}$ \\
+  $>$ $\dfrac{x-2}{(x-2)(x+3)}$ \\
+  $>$ $\dfrac{1}{x+3}$ \\ \\
+  So: 
+  $$\lim_{x\to2} \dfrac{x-2}{(x-2)(x+3)} = \lim_{x\to2} \dfrac{1}{x+3} = \dfrac{1}{5}$$
+  
   \end{document}
   
