--- a/week 1/solutions.tex
+++ b/week 1/solutions.tex
@@ -9,17 +9,16 @@
   \begin{document}
   \maketitle
   \section*{Exercise 6}
-  \begin{itemize}
   
-  \item a) x - $x^3$ = x(1-$x^2$) = x(1+x)(1-x) then we have x \in \{-1, 0, 1\} 
   
-  \item b) we have (1-$x^2$) $>$ 0 =$>$ $\vert$ x $\vert$ $<$ 1 meaning that x \in (-1, 1). \\ 
-  $Thus by resulting on 4 cases:$ \\
-  1) x < -1 => x < 0, (1-$x^2$) $<$ 0, thus f(x) $>$ 0 \\
+  \textbf{a)} x - $x^3$ = x(1-$x^2$) = x(1+x)(1-x) then we have x $\in$ \{-1, 0, 1\} \\ \\
+  \textbf{b)} We have (1-$x^2$) $>$ 0 =$>$ $\vert$ x $\vert$ $<$ 1 meaning that x $\in$ (-1, 1). \\ 
+  Thus by resulting on 4 cases: \\
+  1) x $<$ -1 =$>$ x $<$ 0, (1-$x^2$) $<$ 0, thus f(x) $>$ 0 \\
   2) x \in (-1, 0) => x < 0, (1-$x^2$) $>$ 0, thus f(x) $<$ 0 \\
   3) x \in (0, 1) => x > 0, (1-$x^2$) $>$ 0, thus f(x) $>$ 0 \\
   4) x $>$ 1 =$>$ x $>$ 0, (1-$x^2$) $<$ 0, thus f(x) $<$ 0
-  \end{itemize}
+  
   
   \section*{Exercise 7}
   
@@ -56,7 +55,13 @@
   $>$ $\dfrac{x-2}{(x-2)(x+3)}$ \\
   $>$ $\dfrac{1}{x+3}$ \\ \\
   So: 
-  $$\lim_{x\to2} \dfrac{x-2}{(x-2)(x+3)} = \lim_{x\to2} \dfrac{1}{x+3} = \dfrac{1}{5}$$
+  $$\lim_{x\to2} \dfrac{x-2}{(x-2)(x+3)} = \lim_{x\to2} \\ \\ \dfrac{1}{x+3} = \dfrac{1}{5}$$
+  \textbf{b)} For all x $\neq$ 1 : \\
+  $>$ $\dfrac{x^2 -4x + 3}{x^2 + x - 2}$ \\
+  $>$ $\dfrac{(x-1)(x-3)}{(x-1)(x+2)}$ \\
+  $>$ $\dfrac{x-3}{x+2}$ \\ \\
+  So:
+  $$\lim_{x\to1} \dfrac{x^2 -4x + 3}{x^2 + x - 2} = \lim_{x\to2} \\ \\ \dfrac{x-3}{x+2} = -\dfrac{2}{3}$$
   
   \end{document}
   
