--- a/week 1/solutions.tex
+++ b/week 1/solutions.tex
@@ -25,8 +25,8 @@
   3 cases are to distinguished considering the values of \textit{a} and \textit{b} \\
   1) a == b then y = \{a\} \\
   2) a $>$ b then (b-a) $<$ 0 \\
-  3) a $<$ b then (b-a) $>$ 0. Keeping in mind that x \in $(0,1)$ $ $ then $ $ y = a + (b-a)x > a and y = a + (b-a)x < a + (b-a) = b.  $ $\\ \\
-  $ $ Therefore, y $ $ will $ $ take $ $ values $ $ in $ $ (a,b) \\ 
+  3) a $<$ b then (b-a) $>$ 0. Keeping in mind that x $\in$ $(0,1)$ $ $ then $ $ y = a + (b-a)x $>$ a and y = a + (b-a)x $<$ a + (b-a) = b.\\ \\
+  Therefore, y will take values in (a,b) \\ 
   
   \section*{Exercise 8}
   
@@ -38,6 +38,10 @@
   Since f(-x) $\neq$ -f(x) then the function is \textbf{not odd}.
   
   \section*{Exercise 9}
+  \textbf{a)} To find the domain, the expression inside the square root needs to be greater or equal to zero. Therefore, 7 - $x^2$ $\geq$ 0. In order for the former mentioned condition to be true, -$\sqrt{7}$ $\leq$ x $\leq$ $\sqrt{7}$. \\
+  So, \textbf{D(f) = [-$\sqrt{7}$, $\sqrt{7}$]}. \\ \\ 
+  Knowing the values of x allowed for the expression inside the square root, it is possible to determine the values y may take =$>$ 0 $\leq$ $\sqrt{7 - x^2}$ $\leq$ $\sqrt{7}$. In f(x) the only difference is right part where \textit{+1} is added leading to 0\textbf{+1} $\leq$ $\sqrt{7 - x^2}$ $\leq$ $\sqrt{7} \textbf{+1}$. In order words, \textbf{R(f) = [1, $\sqrt{7}$ + 1]}.
+  
   \section*{Exercise 10}
   \textbf{a)} Transform expression to y(cx + d) = ax + b \\
   $>$ ycx + yd = ax + b \{place x on one side to group\} \\ 
