--- a/week 1/solutions.tex
+++ b/week 1/solutions.tex
@@ -40,7 +40,8 @@
   \section*{Exercise 9}
   \textbf{a)} To find the domain, the expression inside the square root needs to be greater or equal to zero. Therefore, 7 - $x^2$ $\geq$ 0. In order for the former mentioned condition to be true, -$\sqrt{7}$ $\leq$ x $\leq$ $\sqrt{7}$. \\
   So, \textbf{D(f) = [-$\sqrt{7}$, $\sqrt{7}$]}. \\ \\ 
-  Knowing the values of x allowed for the expression inside the square root, it is possible to determine the values y may take =$>$ 0 $\leq$ $\sqrt{7 - x^2}$ $\leq$ $\sqrt{7}$. In f(x) the only difference is right part where \textit{+1} is added leading to 0\textbf{+1} $\leq$ $\sqrt{7 - x^2}$ $\leq$ $\sqrt{7} \textbf{+1}$. In order words, \textbf{R(f) = [1, $\sqrt{7}$ + 1]}.
+  Knowing the values of x allowed for the expression inside the square root, it is possible to determine the values y may take =$>$ 0 $\leq$ $\sqrt{7 - x^2}$ $\leq$ $\sqrt{7}$. In f(x) the only difference is right part where \textit{+1} is added leading to 0\textbf{+1} $\leq$ $\sqrt{7 - x^2}$ $\leq$ $\sqrt{7} \textbf{+1}$. In order words, \textbf{R(f) = [1, $\sqrt{7}$ + 1]}. \\ \\
+  \textbf{b)} Since in a division operation the denominator needs to be $\neq$ 0 then \\ \textbf{D(f) = R \textbackslash \{0\}}. Additionally, the absolute value will guarantee that f(x) will always evaluate to a positive value without caring about the cases when x is positive or negative. Hence, \textbf{R(f) = (0, +$\infty$)}.
   
   \section*{Exercise 10}
   \textbf{a)} Transform expression to y(cx + d) = ax + b \\
